--- a/notebooks/02 - Setup sentencetransformer.ipynb
+++ b/notebooks/02 - Setup sentencetransformer.ipynb
@@ -2,15 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bce6c546-9305-4c06-8c58-4d1c6152530a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "from tiger.data.amazon import AmazonDataset\n",
     "from tiger.models.sentence_encoder import SentenceEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "831faa55-8d6e-4a6b-9f85-b8d70433d2a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "se = SentenceEncoder('../models/sentence-transformer/')"
    ]
   },
   {
@@ -21,29 +40,74 @@
    "outputs": [],
    "source": [
     "ds = AmazonDataset('Beauty', 2014, 5, '../data/')\n",
-    "se = SentenceEncoder('../models/sentence-transformer/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c951cf3a-726f-45e8-b390-8c2e88312324",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = se.encode(ds.items)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2581d4f-bf0c-439f-84a9-ab80c7f7abe9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "embeddings = se.encode(ds.items)\n",
     "with open(f'../data/processed/{ds.year}/{ds.category}_sentence_embeddings.npy', 'wb') as f:\n",
     "    np.save(f, embeddings)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "64c14947-4f8c-4e46-adab-a0bc02033500",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d9f302c245aa43e4834eb8856b3c7779",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/16632 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds = AmazonDataset('Sports_and_Outdoors', 2014, 5, '../data/')\n",
+    "embeddings = se.encode(ds.items)\n",
+    "with open(f'../data/processed/{ds.year}/{ds.category}_sentence_embeddings.npy', 'wb') as f:\n",
+    "    np.save(f, embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9c258e37-3b1f-4902-99f1-eacc3184c989",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c93f2688bd64c1eb5ce1b19542b2250",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/10503 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ds = AmazonDataset('Toys_and_Games', 2014, 5, '../data/')\n",
+    "embeddings = se.encode(ds.items)\n",
+    "with open(f'../data/processed/{ds.year}/{ds.category}_sentence_embeddings.npy', 'wb') as f:\n",
+    "    np.save(f, embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58aee9e2-289a-423e-ba6c-0a919268cae1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
